--- a/AdventOfCode/2018/AdventOfCodeTests/AdventOfCodeTests.csproj
+++ b/AdventOfCode/2018/AdventOfCodeTests/AdventOfCodeTests.csproj
@@ -58,6 +58,7 @@
     <Compile Include="Day07Tests.cs" />
     <Compile Include="Day08Tests.cs" />
     <Compile Include="Day09Tests.cs" />
+    <Compile Include="Day11Tests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
