[AdventOfCode] Add Day18 Part1 solution

--- a/AdventOfCode/2018/AdventOfCodeTests/AdventOfCodeTests.csproj
+++ b/AdventOfCode/2018/AdventOfCodeTests/AdventOfCodeTests.csproj
@@ -61,6 +61,7 @@
     <Compile Include="Day11Tests.cs" />
     <Compile Include="Day12Tests.cs" />
     <Compile Include="Day16Tests.cs" />
+    <Compile Include="Day18Tests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
