--- a/AdventOfCode/2018/AdventOfCodeTests/AdventOfCodeTests.csproj
+++ b/AdventOfCode/2018/AdventOfCodeTests/AdventOfCodeTests.csproj
@@ -63,6 +63,7 @@
     <Compile Include="Day14Tests.cs" />
     <Compile Include="Day16Tests.cs" />
     <Compile Include="Day18Tests.cs" />
+    <Compile Include="Day22Tests.cs" />
     <Compile Include="Day23Tests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
