--- a/AdventOfCode/2018/AdventOfCodeTests/AdventOfCodeTests.csproj
+++ b/AdventOfCode/2018/AdventOfCodeTests/AdventOfCodeTests.csproj
@@ -65,6 +65,7 @@
     <Compile Include="Day18Tests.cs" />
     <Compile Include="Day22Tests.cs" />
     <Compile Include="Day23Tests.cs" />
+    <Compile Include="Day25Tests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
