--- a/AdventOfCode/2018/AdventOfCode/AdventOfCode.csproj
+++ b/AdventOfCode/2018/AdventOfCode/AdventOfCode.csproj
@@ -52,6 +52,7 @@
     <Compile Include="Day09.cs" />
     <Compile Include="Day11.cs" />
     <Compile Include="Day12.cs" />
+    <Compile Include="Day13.cs" />
     <Compile Include="Day14.cs" />
     <Compile Include="Day16.cs" />
     <Compile Include="Day18.cs" />
