--- a/AdventOfCode/2018/AdventOfCodeTests/AdventOfCodeTests.csproj
+++ b/AdventOfCode/2018/AdventOfCodeTests/AdventOfCodeTests.csproj
@@ -60,6 +60,7 @@
     <Compile Include="Day09Tests.cs" />
     <Compile Include="Day11Tests.cs" />
     <Compile Include="Day12Tests.cs" />
+    <Compile Include="Day13Tests.cs" />
     <Compile Include="Day14Tests.cs" />
     <Compile Include="Day16Tests.cs" />
     <Compile Include="Day18Tests.cs" />
