[AdventOfCode] Add Day07 Part1 and Part2 for 2015

--- a/AdventOfCode/2015/C#/AdventOfCode/AdventOfCode.csproj
+++ b/AdventOfCode/2015/C#/AdventOfCode/AdventOfCode.csproj
@@ -42,6 +42,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Day07.cs" />
     <Compile Include="Day24.cs" />
     <Compile Include="Day25.cs" />
     <Compile Include="Program.cs" />
