--- a/AutoMower/AutoMower/AutoMower.csproj
+++ b/AutoMower/AutoMower/AutoMower.csproj
@@ -6,8 +6,8 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{3B27A6E6-A258-4C54-8D54-14AD2F23FF01}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>MowerSimulator</RootNamespace>
-    <AssemblyName>MowerSimulator</AssemblyName>
+    <RootNamespace>AutoMower</RootNamespace>
+    <AssemblyName>AutoMower</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
