[CompressDirectory] Add constants to reduce duplication

--- a/CompressDirectory/CompressDirectory/CompressDirectory.csproj
+++ b/CompressDirectory/CompressDirectory/CompressDirectory.csproj
@@ -45,6 +45,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Compress.cs" />
+    <Compile Include="Constants.cs" />
     <Compile Include="Decompress.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
