--- a/CompressDirectory/CompressDirectory/CompressDirectory.csproj
+++ b/CompressDirectory/CompressDirectory/CompressDirectory.csproj
@@ -47,8 +47,11 @@
     <Compile Include="Compress.cs" />
     <Compile Include="Constants.cs" />
     <Compile Include="Decompress.cs" />
+    <Compile Include="FileHelpers.cs" />
+    <Compile Include="ICompressor.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ZipCompressor.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
