[CompressDirectory] Add tests for SplitFile

--- a/CompressDirectory/CompressDirectoryTests/CompressDirectoryTests.csproj
+++ b/CompressDirectory/CompressDirectoryTests/CompressDirectoryTests.csproj
@@ -12,4 +12,14 @@
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.8.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\CompressDirectory\CompressDirectory.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="RandomFile">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
