--- a/IOweYou/build.gradle
+++ b/IOweYou/build.gradle
@@ -16,6 +16,7 @@ dependencies {
     compile(
             "org.springframework.boot:spring-boot-starter-web"
     )
+    compile group:'org.xerial', name:'sqlite-jdbc', version:'3.8.11.2'
     implementation 'org.springframework.boot:spring-boot-starter'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     compileOnly 'org.projectlombok:lombok:1.18.10'
