[IOweYou] Integrate checkstyle

--- a/IOweYou/build.gradle
+++ b/IOweYou/build.gradle
@@ -22,3 +22,20 @@ dependencies {
     compileOnly 'org.projectlombok:lombok:1.18.10'
     annotationProcessor 'org.projectlombok:lombok:1.18.10'
 }
+
+apply plugin: 'checkstyle'
+checkstyle {
+    toolVersion '7.8.1'
+    configFile file("config/checkstyle/checkstyle.xml")
+}
+checkstyleMain {
+    source ='src/main/java'
+}
+checkstyleTest {
+    source ='src/test/java'
+}
+
+build{
+    dependsOn checkstyleMain
+    dependsOn checkstyleTest
+}
