[Kotlin Koans] Solve several exercises

--- a/Kotlin Koans/Introduction/Lambdas/task-info.yaml
+++ b/Kotlin Koans/Introduction/Lambdas/task-info.yaml
@@ -4,7 +4,7 @@ files:
   visible: true
   placeholders:
   - offset: 74
-    length: 22
+    length: 11
     placeholder_text: TODO()
     initial_state:
       length: 6
@@ -12,12 +12,12 @@ files:
     initialized_from_dependency: false
     possible_answer: it % 2 == 0
     selected: true
-    status: Unchecked
+    status: Solved
   text: |
     fun containsEven(collection: Collection<Int>): Boolean = collection.any { TODO() }
   learner_created: false
 - name: test/tests.kt
   visible: false
   learner_created: false
-status: Unchecked
+status: Solved
 record: -1
