--- a/Kotlin Koans/Introduction/Strings/task-info.yaml
+++ b/Kotlin Koans/Introduction/Strings/task-info.yaml
@@ -4,15 +4,15 @@ files:
   visible: true
   placeholders:
   - offset: 92
-    length: 6
+    length: 24
     placeholder_text: TODO()
     initial_state:
       length: 6
       offset: 92
     initialized_from_dependency: false
     possible_answer: '"""\d{2} ${month} \d{4}"""'
-    selected: false
-    status: Unchecked
+    selected: true
+    status: Solved
   text: |
     val month = "(JAN|FEB|MAR|APR|MAY|JUN|JUL|AUG|SEP|OCT|NOV|DEC)"
 
@@ -21,5 +21,5 @@ files:
 - name: test/tests.kt
   visible: false
   learner_created: false
-status: Unchecked
+status: Solved
 record: -1
